cargo-features = [ "per-package-target" ]

[package]
name = "instance_import"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-wasi"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
invoke-witc = { path = "../../bindings/rust/invoke-witc" }
witc-abi = { path = "../../bindings/rust/witc-abi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
