[package]
name = "witc-abi"
version = "0.2.0"
edition = "2021"
description = "rust supplment for witc"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmedge-sdk = "0.7.1"
once_cell = "1.17.1"
